Bug 446365 - Pattern scale slider in toolbar longer than other sliders (beta3)
Summary: Pattern scale slider in toolbar longer than other sliders (beta3)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-12-02 09:35 UTC by Wojtek Trybus
Modified: 2021-12-06 09:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Prolonged pattern scale slider (11.45 KB, image/png)
2021-12-02 09:35 UTC, Wojtek Trybus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wojtek Trybus 2021-12-02 09:35:49 UTC
Created attachment 144142 [details]
Prolonged pattern scale slider

SUMMARY
Pattern slider got about 2 times longer since beta2 (screenshot attached). I guess it could be longer than it used to to compensate additional multiplier combobox, but this seems unintended


STEPS TO REPRODUCE
1. Change any default toolbox slider to Pattern scale 

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 20.04
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

Will change reported version from unspecified to beta3, as soon as it's enabled
Comment 1 Ahab Greybeard 2021-12-03 09:28:38 UTC
I can confirm this for the 5.0.0-beta3 and the Dec 02 5.1.0-prealpha (git 3eb5d55) appimages.
It does not happen with the 5.0.0-beta2 appimage.

The pattern scale slider will extend gradually if there is room on the Toolbar for it to do that.
Below a certain amount of free space, it will not extend.
Comment 2 Bug Janitor Service 2021-12-06 01:13:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1200
Comment 3 Dmitry Kazakov 2021-12-06 09:10:51 UTC
Git commit ffb8176b38b7c8513c34916aa9ee280de5a259fa by Dmitry Kazakov, on behalf of Reinold Rojas.
Committed on 06/12/2021 at 09:10.
Pushed by dkazakov into branch 'master'.

Fix pattern scale slider expanding too far

Before this commit the pattern scale slider would
expand to the entire length of the toolbar. This
commit fixes that so its about the same size as the
other toolbar sliders.

M  +1    -1    libs/ui/widgets/kis_multipliers_double_slider_spinbox.cpp

https://invent.kde.org/graphics/krita/commit/ffb8176b38b7c8513c34916aa9ee280de5a259fa
Comment 4 Dmitry Kazakov 2021-12-06 09:13:45 UTC
Git commit d24546a743b802f885f26ad32958e9f95a331cd2 by Dmitry Kazakov, on behalf of Reinold Rojas.
Committed on 06/12/2021 at 09:13.
Pushed by dkazakov into branch 'krita/5.0'.

Fix pattern scale slider expanding too far

Before this commit the pattern scale slider would
expand to the entire length of the toolbar. This
commit fixes that so its about the same size as the
other toolbar sliders.
(cherry picked from commit ffb8176b38b7c8513c34916aa9ee280de5a259fa)

M  +1    -1    libs/ui/widgets/kis_multipliers_double_slider_spinbox.cpp

https://invent.kde.org/graphics/krita/commit/d24546a743b802f885f26ad32958e9f95a331cd2