Fix pattern scale slider expanding too far

Before this commit the pattern scale slider would
expand to the entire length of the toolbar. This
commit fixes that so its about the same size as the
other toolbar sliders.

BUG:446365
(cherry picked from commit ffb8176b38b7c8513c34916aa9ee280de5a259fa)